--- a/Web.config
+++ b/Web.config
@@ -62,6 +62,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="ToDoListDBEntities" connectionString="metadata=res://*/TODoList.csdl|res://*/TODoList.ssdl|res://*/TODoList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U4VQTI3\SQLEXPRESS;initial catalog=ToDoListDB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="ToDoListDBEntities1" connectionString="metadata=res://*/tdLew.csdl|res://*/tdLew.ssdl|res://*/tdLew.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U4VQTI3\SQLEXPRESS;initial catalog=ToDoListDB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
