--- a/Web.config
+++ b/Web.config
@@ -15,6 +15,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+    </customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="Account/Login">
+      </forms>
+    </authentication>
+	  <roleManager defaultProvider="myRoleProvider" enabled="true" >
+	  <providers>
+		  <clear/>
+		  <add name="myRoleProvider" type="ToDoWebsite.WebRoleAccess"/>
+	  </providers>
+	  </roleManager>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
   </system.web>
@@ -62,7 +74,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="ToDoListDBEntities" connectionString="metadata=res://*/TODoList.csdl|res://*/TODoList.ssdl|res://*/TODoList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U4VQTI3\SQLEXPRESS;initial catalog=ToDoListDB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	  <add name="ToDoListDBEntities1" connectionString="metadata=res://*/tdLew.csdl|res://*/tdLew.ssdl|res://*/tdLew.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U4VQTI3\SQLEXPRESS;initial catalog=ToDoListDB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ToDoListDBEntities1" connectionString="metadata=res://*/tdLew.csdl|res://*/tdLew.ssdl|res://*/tdLew.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U4VQTI3\SQLEXPRESS;initial catalog=ToDoListDB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
